# nginx-lua-ahocorasick

./: .gitignore  CMakeLists.txt  README.md  ac_helper.cpp  ac_mem_pool.h  aho_corasick.c  lua-ahocorasick-0.1.0-1.rockspec  lua-ahocorasick-0.1.rockspec  lua_ip_finder.cpp  lua_ip_finder.h  main.cpp  test.lua
ahocorasick/: init.lua
rockspec/: lua-ahocorasick-0.1.0-1.rockspec  lua-ahocorasick-0.2.0-3.rockspec
src/: CMakeLists.txt  Makefile  ac_helper.cpp  ac_mem_pool.c  aho_corasick.h  lua_ahocorasick_binding.c  lua_ahocorasick_binding.cpp  main.c  main.cpp  node.c
test/: _fuck_pingbi.txt  test.lua
